--- a/s/sw/swe/sweetkiss.me.html
+++ b/s/sw/swe/sweetkiss.me.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sweetkiss.me privacy policy that was archived on 2013-08-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130810045822id_/http%3A//www.sweetkiss.me/static/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sweetkiss.me privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214063115id_/http%3A//www.sweetkiss.me/static/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
     <title>Privacy Policy - sweetkiss.me</title>
@@ -26,10 +26,12 @@
 	var lang_sending = "Sending...";
 	var lang_share_name_empty = "Please enter your name!";
 	var lang_share_rec_empty = "Please enter at least one recipient email!";
+	var pvx=pvx||{};
+	pvx.cc='US';
 </script>
     <script type="text/javascript" src="http://img.fastcdn.me/js/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="http://img.fastcdn.me/js/jquery.livequery.pack.js"></script>
-    <script type="text/javascript" src="http://img.fastcdn.me/js/jquery.rotator-0.2.js"></script>
+    <script type="text/javascript" src="http://img.fastcdn.me/js/jquery.rotator-0.2.1.js"></script>
     <script type="text/javascript" src="http://img.fastcdn.me/js/jquery.avs-0.2.js?v=1.1.1"></script>
     	<script type="text/javascript" src="http://img.fastcdn.me/js/login.js?v1.1.8"></script>
 </head>
@@ -208,40 +210,38 @@ src="https://c.statcounter.com/7767087/0/6c158bbd/1/"
 alt="godaddy stats"></a></div></noscript>
 <!-- End of StatCounter Code for Default Guide -->
 
-
-
-<script type="text/javascript" src="http://img.fastcdn.me/js/pp.v1.0.7.js"></script>
-<script type="text/javascript" src="http://img.fastcdn.me/js/ppjw.v1.0.1.js"></script>
+<!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
-function getCookie(c) {
-	var cookies=document.cookie.split(';');
-	for(var i=0;i<cookies.length;i++) {
-		var key=cookies[i].substr(0,cookies[i].indexOf("="));
-		var val=cookies[i].substr(cookies[i].indexOf("=")+1);
-		key=key.replace(/^\s+|\s+$/g,"");
-		if(key==c)
-			return unescape(val);
-	}
-	return null;
-}
+var sc_project=9188973; 
+var sc_invisible=1; 
+var sc_security="33ee53a6"; 
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script><script type="text/javascript" src="https://secure.statcounter.com/counter/counter.js"></script>
+<noscript><div class="statcounter"><a title="website
+statistics" href="http://statcounter.com/free-web-stats/"
+target="_blank"><img class="statcounter"
+src="http://c.statcounter.com/9188973/0/33ee53a6/1/"
+alt="website statistics"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
 
-var scr1='<scr'+'ipt type="text/javascr'+'ipt" src="http://st2.sweetkiss.me/js/inx.js"></scr'+'ipt>';
-var scr2='<scr'+'ipt type="text/javascr'+'ipt">juicy_code=\'44d4u2u2r256v2q2s29413\';</scr'+'ipt><scr'+'ipt type="text/javascr'+'ipt" src="http://ads.juicyads.com/jsclients/jac.js" charset="utf-8"></scr'+'ipt>';
 
-if(getCookie('juicy-js-cookie')==null&&getCookie('infPopCookieCap')==null)
-{
-	if(Math.floor(Math.random()*2+1)==1)
-		document.write(scr1);
-	else
-		document.write(scr2);
-}
-else if(getCookie('juicy-js-cookie')!=null&&getCookie('infPopCookieCap')!=null){}
-else if(getCookie('juicy-js-cookie')!=null)
-	document.write(scr1);
-else if(getCookie('infPopCookieCap')!=null)
-	document.write(scr2);
 
-</script><script type="text/javascript" src="http://st2.sweetkiss.me/js/inx.js"></script>
+<script type="text/javascript" src="http://img.fastcdn.me/js/pp.v1.0.8.js"></script>
+<script type="text/javascript" src="http://img.fastcdn.me/js/ppjw.v1.0.6.js"></script>
+<script type="text/javascript">
+
+
+
+
+
+</script>
+
+<script type="text/javascript" src="http://st2.sweetkiss.me/js/snpp.js"></script>
+<script type="text/javascript" src="http://img.fastcdn.me/js/snpp/snpp.v.1.0.10.js"></script>
 
 <script type="text/javascript" src="http://admez.com/ads/sweetkiss.js"></script>
 
