--- a/c/cy/cyf/cyfe.com.html
+++ b/c/cy/cyf/cyfe.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cyfe.com privacy policy that was archived on 2013-08-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130810014425id_/http%3A//www.cyfe.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cyfe.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214064638id_/http%3A//www.cyfe.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
 <title>Privacy Policy | Cyfe</title>
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" type="text/css" media="all" href="css/ie7.css"/>
 	<![endif]-->
 <link rel="shortcut icon" href="images/favicon.ico">
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="js/jquery-1.4.4.min.js" type="text/javascript"></script>
+<script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script src="js/jquery-1.4.4.min.js" type="text/javascript"></script>
 <script src="js/jquery.quicksand.js" type="text/javascript"></script>
 <script src="js/jquery.qtip.js" type="text/javascript"></script>
 <script type="text/javascript" src="js/superfish.js"></script>
@@ -93,7 +93,7 @@
   _gaq.push(['_trackPageview']);
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 </script>
@@ -231,7 +231,7 @@ jQuery(document).ready(function(){
           <!-- AddThis Button END -->
       </div>
       <div class="clear" style="height:0px;"></div>
-      <div class="copyright">Copyright © 2013 Cyfe, Inc. All rights reserved.</div>
+      <div class="copyright">Copyright © 2014 Cyfe, Inc. All rights reserved.</div>
     </div>
   </div>
 </div>
