--- a/f/fi/fig/figureprints.com.html
+++ b/f/fi/fig/figureprints.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the figureprints.com privacy policy that was archived on 2013-09-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130916062137id_/http%3A//www.figureprints.com/Help/Privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the figureprints.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214073116id_/http%3A//figureprints.com/Help/Privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head id="ctl00_Head1"><title>
 	FigurePrints - Privacy Policy
@@ -81,7 +81,7 @@ If you click away from FigurePrints<sup>®</sup> to visit the site of any third 
             Copyright © 2007-2012 FigurePrints LLC
         </div>
         <div id="footer-cache">
-            <!-- generated @ 9/15/2013 11:19:03 PM-->
+            <!-- generated @ 2/13/2014 11:27:58 PM-->
         </div>
     
     </div>
