--- a/w/wo/wor/worldpay.us.html
+++ b/w/wo/wor/worldpay.us.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the worldpay.us privacy policy that was archived on 2013-08-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130825014602id_/http%3A//www.worldpay.us/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the worldpay.us privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214074344id_/http%3A//www.worldpay.us/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN" "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" version="XHTML+RDFa 1.0" dir="ltr" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:dc="http://purl.org/dc/terms/" xmlns:foaf="http://xmlns.com/foaf/0.1/" xmlns:og="http://ogp.me/ns#" xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#" xmlns:sioc="http://rdfs.org/sioc/ns#" xmlns:sioct="http://rdfs.org/sioc/types#" xmlns:skos="http://www.w3.org/2004/02/skos/core#" xmlns:xsd="http://www.w3.org/2001/XMLSchema#"><head profile="http://www.w3.org/1999/xhtml/vocab">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -8,12 +8,31 @@
 <meta about="/privacy" property="sioc:num_replies" content="0" datatype="xsd:integer">
 <meta content="Privacy Statement" about="/privacy" property="dc:title">
   <title>Privacy Statement | WorldPay</title>
-  <link type="text/css" rel="stylesheet" href="http://www.worldpay.us/sites/default/files/css/css_pbm0lsQQJ7A7WCCIMgxLho6mI_kBNgznNUWmTWcnfoE.css" media="all">
-<link type="text/css" rel="stylesheet" href="http://www.worldpay.us/sites/default/files/css/css_h-tng24lVXV-M6HFVZIq3bS-BUtU2F0RwoUwCvrZpT4.css" media="all">
-<link type="text/css" rel="stylesheet" href="http://www.worldpay.us/sites/default/files/css/css_KpHsFsHL5G3x9EUJr5pMqQKsGs4fdCXEGrY6HhOgLHA.css" media="screen">
-<link type="text/css" rel="stylesheet" href="http://www.worldpay.us/sites/default/files/css/css_GpoqO1H_YKBzOUVTKzK4d9W18v7xNMiFHpOi_Fjx5zo.css" media="all">
-<link type="text/css" rel="stylesheet" href="http://www.worldpay.us/sites/default/files/css/css_34Jva-KgQicwpXfYU09kBdmGUI3F9OPfL3E2vOIoO_s.css" media="all">
-<link type="text/css" rel="stylesheet" href="http://www.worldpay.us/sites/default/files/css/css_bP9QKNVmUUB9YEkf9UkmaeorxzeXWe4w8NYlH9Q22BQ.css" media="all">
+  <style type="text/css" media="all">@import url("http://www.worldpay.us/modules/system/system.base.css?n0l4a8");
+@import url("http://www.worldpay.us/modules/system/system.menus.css?n0l4a8");
+@import url("http://www.worldpay.us/modules/system/system.messages.css?n0l4a8");
+@import url("http://www.worldpay.us/modules/system/system.theme.css?n0l4a8");</style>
+<style type="text/css" media="all">@import url("http://www.worldpay.us/sites/all/modules/contrib/columns_filter/columns_filter.css?n0l4a8");
+@import url("http://www.worldpay.us/modules/comment/comment.css?n0l4a8");
+@import url("http://www.worldpay.us/sites/all/modules/contrib/date/date_api/date.css?n0l4a8");
+@import url("http://www.worldpay.us/modules/field/theme/field.css?n0l4a8");</style>
+<style type="text/css" media="screen">@import url("http://www.worldpay.us/sites/all/modules/contrib/flexslider/assets/css/flexslider_img.css?n0l4a8");</style>
+<style type="text/css" media="all">@import url("http://www.worldpay.us/modules/node/node.css?n0l4a8");
+@import url("http://www.worldpay.us/modules/search/search.css?n0l4a8");
+@import url("http://www.worldpay.us/modules/user/user.css?n0l4a8");
+@import url("http://www.worldpay.us/sites/all/modules/contrib/views/css/views.css?n0l4a8");</style>
+<style type="text/css" media="all">@import url("http://www.worldpay.us/sites/all/modules/contrib/colorbox/styles/default/colorbox_default_style.css?n0l4a8");
+@import url("http://www.worldpay.us/sites/all/modules/contrib/ctools/css/ctools.css?n0l4a8");
+@import url("http://www.worldpay.us/sites/all/modules/contrib/nice_menus/nice_menus.css?n0l4a8");
+@import url("http://www.worldpay.us/sites/all/modules/contrib/nice_menus/nice_menus_default.css?n0l4a8");
+@import url("http://www.worldpay.us/sites/all/modules/contrib/panels/css/panels.css?n0l4a8");
+@import url("http://www.worldpay.us/sites/all/modules/contrib/tagclouds/tagclouds.css?n0l4a8");
+@import url("http://www.worldpay.us/sites/all/modules/contrib/views_slideshow/views_slideshow.css?n0l4a8");</style>
+<style type="text/css" media="all">@import url("http://www.worldpay.us/sites/all/themes/worldpay/css/base.css?n0l4a8");
+@import url("http://www.worldpay.us/sites/all/themes/worldpay/css/style.css?n0l4a8");
+@import url("http://www.worldpay.us/sites/all/themes/worldpay/css/menus.css?n0l4a8");
+@import url("http://www.worldpay.us/sites/all/themes/worldpay/css/third_style.css?n0l4a8");
+@import url("http://www.worldpay.us/sites/all/themes/worldpay/css/style_temp.css?n0l4a8");</style>
   <!--[if IE 7]><link rel="stylesheet" href="http://www.worldpay.us/sites/all/themes/worldpay/css/ie7.css" type="text/css" /><![endif]-->
   <script id="twitter-wjs" src="//platform.twitter.com/widgets.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="http://www.worldpay.us/sites/default/files/js/js_xAPl0qIk9eowy_iS9tNkCWXLUVoat94SQT48UBCFkyQ.js"></script>
 <script type="text/javascript" src="http://www.worldpay.us/sites/default/files/js/js_KCd8rbJYUruV1tRJnh4um34UYvyhlrSVCPR1jNko2h8.js"></script>
@@ -30,10 +49,10 @@ _gaq.push(['_setAllowHash', false]);_gaq.push(["_trackPageview"]);(function() {v
 <script type="text/javascript" src="http://www.worldpay.us/sites/default/files/js/js_kR8sq-c1VSXNJpbJQ1iqWKcSkLlXnabdSSz55D15W3s.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"worldpay","theme_token":"nA3fWZcqpMtf8a7AOJwgSok-mEQg4AoNhlcvBpbi6dE","js":{"0":1,"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"misc\/form.js":1,"sites\/all\/modules\/contrib\/admin_menu\/admin_devel\/admin_devel.js":1,"sites\/all\/libraries\/colorbox\/colorbox\/jquery.colorbox-min.js":1,"sites\/all\/modules\/contrib\/colorbox\/js\/colorbox.js":1,"sites\/all\/modules\/contrib\/colorbox\/styles\/default\/colorbox_default_style.js":1,"sites\/all\/modules\/contrib\/colorbox\/js\/colorbox_load.js":1,"sites\/all\/modules\/contrib\/colorbox\/js\/colorbox_inline.js":1,"sites\/all\/modules\/contrib\/nice_menus\/superfish\/js\/superfish.js":1,"sites\/all\/modules\/contrib\/nice_menus\/superfish\/js\/jquery.bgiframe.min.js":1,"sites\/all\/modules\/contrib\/nice_menus\/superfish\/js\/jquery.hoverIntent.minified.js":1,"sites\/all\/modules\/contrib\/nice_menus\/nice_menus.js":1,"sites\/all\/modules\/contrib\/panels\/js\/panels.js":1,"sites\/all\/modules\/contrib\/views_slideshow\/js\/views_slideshow.js":1,"sites\/all\/modules\/contrib\/google_analytics\/googleanalytics.js":1,"1":1,"sites\/all\/modules\/custom\/live_person\/live_person.js":1,"misc\/collapse.js":1,"sites\/all\/themes\/worldpay\/js\/jquery.placeholder.js":1,"sites\/all\/themes\/worldpay\/js\/script.js":1,"sites\/all\/themes\/worldpay\/js\/live_chat.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"sites\/all\/modules\/contrib\/columns_filter\/columns_filter.css":1,"modules\/comment\/comment.css":1,"sites\/all\/modules\/contrib\/date\/date_api\/date.css":1,"modules\/field\/theme\/field.css":1,"sites\/all\/modules\/contrib\/flexslider\/assets\/css\/flexslider_img.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"sites\/all\/modules\/contrib\/views\/css\/views.css":1,"sites\/all\/modules\/contrib\/colorbox\/styles\/default\/colorbox_default_style.css":1,"sites\/all\/modules\/contrib\/ctools\/css\/ctools.css":1,"sites\/all\/modules\/contrib\/nice_menus\/nice_menus.css":1,"sites\/all\/modules\/contrib\/nice_menus\/nice_menus_default.css":1,"sites\/all\/modules\/contrib\/panels\/css\/panels.css":1,"sites\/all\/modules\/contrib\/tagclouds\/tagclouds.css":1,"sites\/all\/modules\/contrib\/views_slideshow\/views_slideshow.css":1,"sites\/all\/themes\/worldpay\/css\/base.css":1,"sites\/all\/themes\/worldpay\/css\/style.css":1,"sites\/all\/themes\/worldpay\/css\/menus.css":1,"sites\/all\/themes\/worldpay\/css\/third_style.css":1,"sites\/all\/themes\/worldpay\/css\/style_temp.css":1}},"colorbox":{"opacity":"0.85","current":"{current} of {total}","previous":"\u00ab Prev","next":"Next \u00bb","close":"Close","maxWidth":"100%","maxHeight":"100%","fixed":true},"nice_menus_options":{"delay":"800","speed":"slow"},"googleanalytics":{"trackOutbound":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|arc|arj|asf|asx|avi|bin|csv|doc|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls|xml|z|zip"},"livePerson":{"accountId":"20658005","url":"https:\/\/server.iad.liveperson.net\/hc\/?cmd=file\u0026site=20658005\u0026file=visitorWantsToChat\u0026referrer=\u0026imageUrl=http%3A\/\/www.worldpay.us\/sites\/all\/themes\/worldpay\/live_person","width":"500","height":"500"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"worldpay","theme_token":"JTpsk5CNzpeYc1v0UVhheC26dary6834PuQQeRv0dFc","js":{"0":1,"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"misc\/form.js":1,"sites\/all\/modules\/contrib\/admin_menu\/admin_devel\/admin_devel.js":1,"sites\/all\/libraries\/colorbox\/colorbox\/jquery.colorbox-min.js":1,"sites\/all\/modules\/contrib\/colorbox\/js\/colorbox.js":1,"sites\/all\/modules\/contrib\/colorbox\/styles\/default\/colorbox_default_style.js":1,"sites\/all\/modules\/contrib\/colorbox\/js\/colorbox_load.js":1,"sites\/all\/modules\/contrib\/colorbox\/js\/colorbox_inline.js":1,"sites\/all\/modules\/contrib\/nice_menus\/superfish\/js\/superfish.js":1,"sites\/all\/modules\/contrib\/nice_menus\/superfish\/js\/jquery.bgiframe.min.js":1,"sites\/all\/modules\/contrib\/nice_menus\/superfish\/js\/jquery.hoverIntent.minified.js":1,"sites\/all\/modules\/contrib\/nice_menus\/nice_menus.js":1,"sites\/all\/modules\/contrib\/panels\/js\/panels.js":1,"sites\/all\/modules\/contrib\/views_slideshow\/js\/views_slideshow.js":1,"sites\/all\/modules\/contrib\/google_analytics\/googleanalytics.js":1,"1":1,"sites\/all\/modules\/custom\/live_person\/live_person.js":1,"misc\/collapse.js":1,"sites\/all\/themes\/worldpay\/js\/jquery.placeholder.js":1,"sites\/all\/themes\/worldpay\/js\/script.js":1,"sites\/all\/themes\/worldpay\/js\/live_chat.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"sites\/all\/modules\/contrib\/columns_filter\/columns_filter.css":1,"modules\/comment\/comment.css":1,"sites\/all\/modules\/contrib\/date\/date_api\/date.css":1,"modules\/field\/theme\/field.css":1,"sites\/all\/modules\/contrib\/flexslider\/assets\/css\/flexslider_img.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"sites\/all\/modules\/contrib\/views\/css\/views.css":1,"sites\/all\/modules\/contrib\/colorbox\/styles\/default\/colorbox_default_style.css":1,"sites\/all\/modules\/contrib\/ctools\/css\/ctools.css":1,"sites\/all\/modules\/contrib\/nice_menus\/nice_menus.css":1,"sites\/all\/modules\/contrib\/nice_menus\/nice_menus_default.css":1,"sites\/all\/modules\/contrib\/panels\/css\/panels.css":1,"sites\/all\/modules\/contrib\/tagclouds\/tagclouds.css":1,"sites\/all\/modules\/contrib\/views_slideshow\/views_slideshow.css":1,"sites\/all\/themes\/worldpay\/css\/base.css":1,"sites\/all\/themes\/worldpay\/css\/style.css":1,"sites\/all\/themes\/worldpay\/css\/menus.css":1,"sites\/all\/themes\/worldpay\/css\/third_style.css":1,"sites\/all\/themes\/worldpay\/css\/style_temp.css":1}},"colorbox":{"opacity":"0.85","current":"{current} of {total}","previous":"\u00ab Prev","next":"Next \u00bb","close":"Close","maxWidth":"100%","maxHeight":"100%","fixed":true},"nice_menus_options":{"delay":"800","speed":"slow"},"googleanalytics":{"trackOutbound":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|arc|arj|asf|asx|avi|bin|csv|doc|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls|xml|z|zip"},"livePerson":{"accountId":"20658005","url":"https:\/\/server.iad.liveperson.net\/hc\/?cmd=file\u0026site=20658005\u0026file=visitorWantsToChat\u0026referrer=http%3A\/\/www.worldpay.us\/\u0026imageUrl=http%3A\/\/www.worldpay.us\/sites\/all\/themes\/worldpay\/live_person","width":"500","height":"500"}});
 //--><!]]>
 </script>
-<script type="text/javascript" charset="iso-8859-1" src="https://server.iad.liveperson.net/hcp/html/mTag.js?site=20658005"></script></head>
+<script type="text/javascript" charset="iso-8859-1" src="https://server.iad.liveperson.net/hcp/html/mTag.js?site=20658005"></script><script async="true" type="text/javascript" src="https://s.adroll.com/j/roundtrip.js"></script></head>
 <body class="html not-front not-logged-in no-sidebars page-node page-node- page-node-73 node-type-page">
   <div id="skip-link">
     <a href="#main-content" class="element-invisible element-focusable">Skip to main content</a>
@@ -162,7 +181,7 @@ jQuery(document).ready(function() {
 							<li class="started">  <div class="region region-started">
     <div id="block-block-3" class="block block-block ">
         <div class="content">
-    <p><a class="cta_btn iframe cboxElement" href="/get-started-worldpay">Get Started</a></p>
+    <p><a class="cta_btn iframe cboxElement" href="/get-started-with-worldpay">Request a Call</a></p>
   </div>
 </div> <!-- /block -->  </div>
 </li>
@@ -175,7 +194,7 @@ jQuery(document).ready(function() {
   <label class="element-invisible" for="edit-search-block-form--2">Search </label>
  <input title="Enter the terms you wish to search for." type="text" id="edit-search-block-form--2" name="search_block_form" value="" size="15" maxlength="128" class="form-text">
 </div>
-<div class="form-actions form-wrapper" id="edit-actions"><input type="submit" id="edit-submit" name="op" value="Search" class="form-submit"></div><input type="hidden" name="form_build_id" value="form-DkpODa6o2-ZbVzeQQ9uBlQV4vWvUhUx8fU0kSw9BaJc">
+<div class="form-actions form-wrapper" id="edit-actions"><input type="submit" id="edit-submit" name="op" value="Search" class="form-submit"></div><input type="hidden" name="form_build_id" value="form-vFxl2p-gy5RvzGRQzYHHUBNpDpyX8t8rixIAlBjJXk4">
 <input type="hidden" name="form_id" value="search_block_form">
 </div>
 </div></form>  </div>
@@ -376,6 +395,23 @@ var lpMTagConfig = {'lpServer' : "server.iad.liveperson.net",'lpNumber' : "20658
 </script>
 
 
+<script type="text/javascript"> 
+adroll_adv_id = "MM7CEARDFBAQFKF7M2SDWZ"; 
+adroll_pix_id = "6FZIU56725DSPL7QXGWQ5H"; 
+(function () { 
+var oldonload = window.onload; 
+window.onload = function(){ 
+   __adroll_loaded=true; 
+   var scr = document.createElement("script"); 
+   var host = (("https:" == document.location.protocol) ? "https://s.adroll.com" : "http://a.adroll.com"); 
+   scr.setAttribute('async', 'true'); 
+   scr.type = "text/javascript"; 
+   scr.src = host + "/j/roundtrip.js"; 
+   ((document.getElementsByTagName('head') || [null])[0] || 
+    document.getElementsByTagName('script')[0].parentNode).appendChild(scr); 
+   if(oldonload){oldonload()}}; 
+}()); 
+</script>
 
 <!-- Google Code for All Visitors -->
 
